add iPXE account + basic auth
