# docs/swagger.yaml
@@ -6,6 +6,8 @@ definitions:
         type: string
       build_arch:
         type: string
+      created_at:
+        type: string
       hostname:
         type: string
       id:
@@ -26,12 +28,27 @@ definitions:
         items:
           $ref: '#/definitions/models.Tag'
         type: array
+      updated_at:
+        type: string
       version:
         type: string
     type: object
   models.Error:
     properties:
       error:
+        type: string
+    type: object
+  models.Ipxeaccount:
+    properties:
+      created_at:
+        type: string
+      last_login:
+        type: string
+      password:
+        type: string
+      updated_at:
+        type: string
+      username:
         type: string
     type: object
   models.Tag:
@@ -159,4 +176,132 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Update computer
+  /ipxeaccount:
+    get:
+      consumes:
+      - application/json
+      description: List of accounts for ipxe
+      parameters:
+      - description: Offset
+        in: query
+        name: _start
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Ipxeaccount'
+            type: array
+      summary: List iPXE account
+    post:
+      consumes:
+      - application/json
+      description: Create a iPXE account
+      parameters:
+      - description: json format iPXE account
+        in: body
+        name: ipxeaccount
+        required: true
+        schema:
+          $ref: '#/definitions/models.Ipxeaccount'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Ipxeaccount'
+        "404":
+          description: Can not find ID
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Unmarshall error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Create iPXE account
+  /ipxeaccount/{username}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a iPXE account
+      parameters:
+      - description: Username
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Ipxeaccount'
+        "404":
+          description: Can not find ID
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Delete iPXE account
+    get:
+      consumes:
+      - application/json
+      description: Get iPXE account by username
+      parameters:
+      - description: Username
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Ipxeaccount'
+        "404":
+          description: Computer with uuid %s not found
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Get iPXE account
+    put:
+      consumes:
+      - application/json
+      description: Update a iPXE account
+      parameters:
+      - description: Username
+        in: path
+        name: username
+        required: true
+        type: string
+      - description: json format iPXE account
+        in: body
+        name: ipxeaccount
+        required: true
+        schema:
+          $ref: '#/definitions/models.Ipxeaccount'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Ipxeaccount'
+        "400":
+          description: Query username and username miss match
+          schema:
+            $ref: '#/definitions/models.Error'
+        "404":
+          description: Can not find ID
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Unmarshall error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Update iPXE account
 swagger: "2.0"
